# work-nest

./: .gitignore  CLAUDE.md  README.md  REVIEW_REPORT.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  workspace.md
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/commands/: settings.rs  tag.rs  workspace.rs
src-tauri/src/db/: mod.rs  schema.sql
src-tauri/src/models/: mod.rs  settings.rs  tag.rs  workspace.rs
src/components/common/: sidebar.tsx
src/components/icons/: ClaudeIcon.tsx  GitIcon.tsx  IDEAIcon.tsx  OpencodeIcon.tsx  QoderIcon.tsx  VSCodeIcon.tsx
src/components/report/: report-page.tsx
src/components/settings/: settings-page.tsx
src/components/tags/: tags-page.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  scroll-area.tsx
src/components/workspace-list/: add-workspace-dialog.tsx  edit-workspace-dialog.tsx  workspace-list.tsx  workspaces-page.tsx
src/i18n/: index.tsx  locales.ts
src/lib/: utils.ts
src/store/: app-store.ts  workspace-store.ts
src/types/: index.ts  settings.ts  tag.ts  workspace.ts
src/utils/: commands.ts
