[package]
name = "worknest"
version = "0.1.0"
description = "WorkNest - A modern workspace manager for developers"
authors = ["focsim"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "chrono", "uuid", "serde_json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
notify = "7"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = "s"
